templates/svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-depl
spec:
  selector:
    matchLabels:
      app: webserver-app
  template:
    metadata:
      labels:
        app: webserver-app
    spec:
      containers:
        - name: webserver-app
          image: nginx:1.8
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  selector:
    app: webserver-app
  ports:
  - name: webserver-app
    protocol: TCP
    port: 80
    targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: external-service
#   namespace: default
# spec:
#   type: ExternalName
#   externalName: 192.168.1.152 # eg example.example.com
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonar-svc
subsets:
  - addresses:
      - ip: 192.168.1.152
    ports:
      - port: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
selector:
    app: sonar-ep
spec:
  ports:
    - port: 80
      targetPort: 8989

# ---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: radar-ep
# subsets:
#   - addresses:
#       - ip: 192.168.1.152
#     ports:
#       - port: 7878
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: radar-svc
# spec:
#   ports:
#     - port: 80
#       targetPort: 7878
