templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insecure-service-expose
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: public
  tls:
    - hosts:
      - tkuipers.ca
      secretName: tkuipers-ca-tls
    - hosts:
      - sonar.mushu.tkuipers.ca
      secretName: sonar-mushu-tkuipers-ca-tls
    - hosts:
      - radar.mushu.tkuipers.ca
      secretName: radar-mushu-tkuipers-ca-tls
    - hosts:
      - plex.mushu.tkuipers.ca
      secretName: plex-mushu-tkuipers-ca-tls
    - hosts:
      - hua.tkuipers.ca
      secretName: hua-tkuipers-ca-tls
    - hosts:
      - scrooge.tkuipers.ca
      secretName: scrooge-tkuipers-ca-tls
  rules:
  - host: tkuipers.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-svc
              port:
                number: 80
  - host: sonar.mushu.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar-svc
            port:
              number: 80
  - host: radar.mushu.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radar-svc
            port:
              number: 80
  - host: plex.mushu.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-svc
            port:
              number: 80
  - host: hua.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-svc
            port:
              number: 80
  - host: scrooge.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stocker-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-service-expose
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: public
  tls:
    - hosts:
      - lishang.tkuipers.ca
      secretName: lishang-tkuipers-ca-tls
    - hosts:
      - chi-fu.tkuipers.ca
      secretName: chi-fu-tkuipers-ca-tls
  rules:
  - host: lishang.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox-svc
            port:
              number: 80
  - host: chi-fu.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk-svc
            port:
              number: 80
